--- a/Danhmuc/category.html
+++ b/Danhmuc/category.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Danh mục sách</title>
 
-    <link rel="stylesheet" href="Trangchu.css">
+    <link rel="stylesheet" href="../Trangchu/Trangchu.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
