cap nhat tinh nang

--- a/Trangchu/Trangchu.html
+++ b/Trangchu/Trangchu.html
@@ -12,6 +12,8 @@
         <h1 style="color:white; text-shadow: 2px 2px #004;">BookStore – Giáng Sinh 2025</h1>
 
         <nav>
+           
+
             <a href="Trangchu.html">Trang chủ</a>
            
             <a href="../Giohang/cart.html" id="cartLink">Giỏ hàng</a>
@@ -75,10 +77,10 @@
             <div class="banner-container">
                 <img src="images/banner1.webp" class="banner active" alt="Banner 1">
                 <img src="images/banner2.webp" class="banner" alt="Banner 2">
-                <img src="images/banner3.webp" class="banner" alt="Banner 3">
+                <img src="images/Banner3.jpg" class="banner" alt="Banner 3">
             </div>
-            <button class="banner-btn prev" onclick="moveBanner(-1)">❮</button>
-            <button class="banner-btn next" onclick="moveBanner(1)">❯</button>
+            <button class="banner-btn left" onclick="moveBanner(-1)">❮</button>
+            <button class="banner-btn right" onclick="moveBanner(1)">❯</button>
         </section>
 
         <section class="book-section flash-sale">
@@ -179,6 +181,15 @@
 
     setInterval(createSnow, 150);
 </script>
+<script>
+const toggleBtn = document.getElementById("themeToggle");
+const body = document.body;
+
+
+
+</script>
+
+
 
 
 </body>
