--- a/Danhmuc/category.html
+++ b/Danhmuc/category.html
@@ -85,24 +85,19 @@
 </header>
 
 <div class="search-bar">
-    <input 
-        type="text"
-        id="searchInput"
-        placeholder="Tìm kiếm sách, tác giả, thể loại..."
-    >
+    <div class="search-wrapper">
+        <input id="searchInput" type="text" placeholder="Tìm kiếm sách, tác giả...">
+        <div id="suggestBox" class="suggest-box"></div>
+    </div>
 
     <button id="searchBtn">
         <i class="fas fa-search"></i> Tìm kiếm
     </button>
 
     <button id="menu-btn" class="menu-btn">
-        <i class="fas fa-bars"></i> Danh mục
+        <i class="fas fa-bars"></i>
     </button>
-
-    <!-- BOX GỢI Ý (BẮT BUỘC PHẢI CÓ) -->
-    <div id="suggestBox" class="suggest-box"></div>
 </div>
-
 
 <section class="book-section">
     <h2 id="category-title">Danh mục</h2>
@@ -212,11 +207,6 @@
         });
     });
 </script>
-<script>
-
-</script>
-
-
-
+<script src="../common/search.js"></script>
 </body>
 </html>
