cap nhat forgot pass

--- a/Chitiet/detail.html
+++ b/Chitiet/detail.html
@@ -12,7 +12,10 @@
 <body>
 
   <header>
-    <h1>BookStore</h1>
+  <h1 class="logo">
+  <a href="../Trangchu/Trangchu.html" class="logo-link">BookStore – Giáng Sinh 2025</a>
+</h1>
+
    <nav>
   <a href="../Trangchu/Trangchu.html">Trang chủ</a>
   <a href="../Giohang/cart.html" id="cartLink">Giỏ hàng</a>
