--- a/Danhmuc/category.html
+++ b/Danhmuc/category.html
@@ -65,7 +65,12 @@
 </div>
 
 <header>
-    <h1>BookStore</h1>
+    <h1 class="logo">
+  <a href="../Trangchu/Trangchu.html" class="logo-link">
+    BookStore – Giáng Sinh 2025
+  </a>
+</h1>
+
     <nav>
         <a href="../Trangchu/Trangchu.html">Trang chủ</a> 
 
