--- a/Trangchu/Trangchu.html
+++ b/Trangchu/Trangchu.html
@@ -10,7 +10,11 @@
 <body>
 
     <header>
-        <h1 style="color:white; text-shadow: 2px 2px #004;">BookStore – Giáng Sinh 2025</h1>
+       <h1 class="logo">
+  <a href="../Trangchu/Trangchu.html" class="logo-link">
+    BookStore – Giáng Sinh 2025
+  </a>
+</h1>
 
         <nav>
            
