--- a/loginregister/login.html
+++ b/loginregister/login.html
@@ -28,7 +28,8 @@
 
     <!-- Quên mật khẩu / Đăng ký -->
     <div class="links">
-      <a href="forgot.html" class="forgot-link">Quên mật khẩu?</a>
+    <a href="forgot.html">Quên mật khẩu?</a>
+
       <a href="register.html" class="register-link">Đăng ký</a>
     </div>
 
